force-app/main/default/objects/Issue_Adjustment__c/Issue_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Issue Adjustment</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Issue Adjustment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues Adjustment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>