force-app/main/default/objects/Issue_Adjustment__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>