force-app/main/default/objects/Issue_Adjustment__c/fields/Adjustment_Code__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Code__c</fullName>
    <label>Adjustment Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BH</fullName>
            </value>
            <value>
                <fullName>CN</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>IH</fullName>
            </value>
            <value>
                <fullName>RID</fullName>
            </value>
            <value>
                <fullName>SCF</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>TC</fullName>
            </value>
            <value>
                <fullName>CCL</fullName>
            </value>
            <value>
                <fullName>FC</fullName>
            </value>
            <value>
                <fullName>ITPD</fullName>
            </value>
            <value>
                <fullName>ITS</fullName>
            </value>
            <value>
                <fullName>ITMT</fullName>
            </value>
            <value>
                <fullName>ITM</fullName>
            </value>
            <value>
                <fullName>ITB</fullName>
            </value>
            <value>
                <fullName>ITF</fullName>
            </value>
            <value>
                <fullName>ITCS</fullName>
            </value>
            <value>
                <fullName>ITVT</fullName>
            </value>
            <value>
                <fullName>ITUD</fullName>
            </value>
            <value>
                <fullName>ITUT</fullName>
            </value>
            <value>
                <fullName>ITSN</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>ITL</fullName>
            </value>
            <value>
                <fullName>ITVD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>