force-app/main/default/objects/Issue_Adjustment__c/fields/Adjustment_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Adjustment Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>