force-app/main/default/objects/Issue_Adjustment__c/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brand Hierarchy</fullName>
            </value>
            <value>
                <fullName>Consumer Notes</fullName>
            </value>
            <value>
                <fullName>Date Code</fullName>
            </value>
            <value>
                <fullName>Issue Hierarchy</fullName>
            </value>
            <value>
                <fullName>Related Issue ID</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Suspected Counterfeit Flag</fullName>
            </value>
            <value>
                <fullName>Suspected Tampering</fullName>
            </value>
            <value>
                <fullName>Trace Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>