force-app/main/default/objects/Issue_Adjustment__c/fields/isReviewed__c.field-meta.xml
<CustomField>
    <fullName>isReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isReviewed</label>
    <type>Checkbox</type>
</CustomField>