force-app/main/default/objects/Issue_Adjustment__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issue</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Issues Adjustment</relationshipLabel>
    <relationshipName>Cases_Adjustment</relationshipName>
    <type>Lookup</type>
</CustomField>