force-app/main/default/objects/Issue_Adjustment__c/fields/IssueNumber__c.field-meta.xml
<CustomField>
    <fullName>IssueNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IssueNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>