force-app/main/default/objects/Issue_Adjustment__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>