force-app/main/default/objects/Issue_Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Action_Type__c</columns>
    <columns>Adjustment_Code__c</columns>
    <columns>Adjustment_Instructions__c</columns>
    <columns>Adjustment_Type__c</columns>
    <columns>IssueNumber__c</columns>
    <columns>FeedSend__c</columns>
    <columns>New_Value__c</columns>
    <columns>Old_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2019 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>